[package]
edition = "2018"
readme = "README.md"
name = "demo-hifive-inventor"
version = "0.1.0"

[features]
#semihosting = ["kern/klog-semihosting-riscv"]

[dependencies]
cfg-if = "0.1.10"
panic-halt = "0.2.0"
riscv = "0.8.0"
riscv-rt = "0.9.0"

[dependencies.kern]
path = "../../sys/kern"
default-features = false
features = ["vectored-interrupts"]

[build-dependencies]
build-util = {path = "../../build/util"}

# this lets you use `cargo fix`!
[[bin]]
name = "demo-hifive-inventor"
test = false
bench = false
