[package]
edition = "2018"
readme = "README.md"
name = "demo-hifive1-revb"
version = "0.1.0"

[dependencies]
cfg-if = "0.1.10"
panic-halt = "0.2.0"
riscv = { git = "https://github.com/rivosinc/riscv", branch = "rivos/dev" }
riscv-rt = { git = "https://github.com/rivosinc/riscv-rt", branch = "master" }


[dependencies.kern]
path = "../../sys/kern"
default-features = false

[build-dependencies]
build-util = {path = "../../build/util"}

# this lets you use `cargo fix`!
[[bin]]
name = "demo-hifive1-revb"
test = false
bench = false
