[package]
edition = "2018"
readme = "README.md"
name = "demo-ibex-super-system"
version = "0.1.0"

[dependencies]
cfg-if = "0.1.10"
panic-halt = "0.2.0"
riscv = { git = "https://github.com/rivosinc/riscv", branch = "rivos/dev" }
riscv-rt = "0.9.0"

[dependencies.kern]
path = "../../sys/kern"
default-features = false
features = [ "vectored-interrupts" ]

[build-dependencies]
build-util = {path = "../../build/util"}

# this lets you use `cargo fix`!
[[bin]]
name = "demo-ibex-super-system"
test = false
bench = false
