[package]
name = "demo-rv64-qemu-virt-supervisor"
version = "0.1.0"
edition = "2021"

[dependencies]
cfg-if = "1.0.0"
panic-halt = "0.2.0"
riscv = { git = "https://github.com/rivosinc/riscv", branch = "rivos/dev" }
riscv-rt = { git = "https://github.com/rust-embedded/riscv-rt.git", rev = "3b4ab6f3", features = ["s-mode"] }

[dependencies.kern]
path = "../../sys/kern"
default-features = false
features = ["vectored-interrupts", "riscv-supervisor-mode", "klog-semihosting"]

[build-dependencies]
build-util = {path = "../../build/util"}

# this lets you use `cargo fix`!
[[bin]]
name = "demo-rv64-qemu-virt-supervisor"
test = false
bench = false
