[package]
name = "demo-rv64-qemu-virt-supervisor"
version = "0.1.0"
edition = "2021"

[dependencies]
cfg-if = "1.0.0"
panic-halt = "0.2.0"
riscv = { git = "https://github.com/rivosinc/riscv", rev = "2f1a9fd16ba2b40e2c709a285f6f37865d1b012d" }
riscv-rt = { git = "https://github.com/rust-embedded/riscv-rt.git", rev = "3b4ab6f3", features = ["s-mode"] }

[dependencies.kern]
path = "../../sys/kern"
default-features = false
features = ["vectored-interrupts", "riscv-supervisor-mode", "klog-semihosting", "riscv-support-sstc"]

[build-dependencies]
build-util = {path = "../../build/util"}

# this lets you use `cargo fix`!
[[bin]]
name = "demo-rv64-qemu-virt-supervisor"
test = false
bench = false
