[package]
name = "demo-rv64-qemu-virt-supervisor"
version = "0.1.0"
edition = "2021"

[features]
s-mode = ["riscv-rt/s-mode", "kern/riscv-supervisor-mode"]

[dependencies]
cfg-if = "1.0.0"
panic-halt = "0.2.0"
riscv = { git = "https://github.com/rivosinc/riscv", branch = "rivos/dev" }
riscv-rt = { git = "https://github.com/rust-embedded/riscv-rt.git", rev = "be9e61b79b1ae16a1314134bfb44ae9119554072", features = ["s-mode"] }

[dependencies.kern]
path = "../../sys/kern"
default-features = false
features = ["vectored-interrupts", "riscv-support-sstc"]

[build-dependencies]
build-util = {path = "../../build/util"}

# this lets you use `cargo fix`!
[[bin]]
name = "demo-rv64-qemu-virt-supervisor"
test = false
bench = false
