[package]
name = "demo-rv64-qemu-virt"
version = "0.1.0"
edition = "2021"

[dependencies]
cfg-if = "0.1.10"
panic-halt = "0.2.0"
riscv = "0.8.0"
riscv-rt = "0.9.0"

[dependencies.kern]
path = "../../sys/kern"
default-features = false
features = ["vectored-interrupts"]

[build-dependencies]
build-util = {path = "../../build/util"}

# this lets you use `cargo fix`!
[[bin]]
name = "demo-rv64-qemu-virt"
test = false
bench = false
