[package]
name = "demo-rv64-qemu-virt"
version = "0.1.0"
edition = "2021"

[features]
riscv-sifive_test-device = ["kern/riscv-sifive_test-device"]

[dependencies]
cfg-if = "0.1.10"
panic-halt = "0.2.0"
riscv = { git = "https://github.com/rivosinc/riscv", branch = "rivos/dev" }
riscv-rt = "0.9.0"

[dependencies.kern]
path = "../../sys/kern"
default-features = false
features = ["vectored-interrupts", "klog-semihosting"]

[build-dependencies]
build-util = {path = "../../build/util"}

# this lets you use `cargo fix`!
[[bin]]
name = "demo-rv64-qemu-virt"
test = false
bench = false
