[package]
name = "drv-kipc-reset"
version = "0.1.0"
edition = "2021"

[dependencies]
userlib = {path = "../../sys/userlib", features = ["panic-messages"]}
num-traits = {version = "0.2.12", default-features = false }
serde = {version = "1", default-features = false, features = ["derive"]}
ssmarshal = {version = "1", default-features = false}
zerocopy = "0.6.1"
idol-runtime = {git = "https://github.com/oxidecomputer/idolatry.git"}
task-reset-api = {path = "../../task/reset-api"}

[build-dependencies]
idol = {git = "https://github.com/oxidecomputer/idolatry.git"}

# This section is here to discourage RLS/rust-analyzer from doing test builds,
# since test builds don't work for cross compilation.
[[bin]]
name = "drv-kipc-reset"
test = false
bench = false
