[package]
name = "drv-ot-aontimer"
version = "0.1.0"
edition = "2021"

[dependencies]
userlib = {path = "../../sys/userlib", features = ["panic-messages"]}
zerocopy = "0.6.1"

[features]
semihosting-riscv = [ "riscv-semihosting", "userlib/log-semihosting" ]
log-null = ["userlib/log-null"]

[target.'cfg(target_arch = "riscv32")'.dependencies]
riscv = { version = "0.8" }
riscv-semihosting = { git = "https://github.com/rivosinc/riscv-semihosting", branch = "dev/fawaz/privilege-features", optional = true, features = ["default", "user-mode"] }
riscv-pseudo-atomics = { git = "https://github.com/rivosinc/riscv-psuedo-atomics", branch = "rivos/main", features = ["default", "user-mode"] }

# This section is here to discourage RLS/rust-analyzer from doing test builds,
# since test builds don't work for cross compilation.
[lib]
name = "aontimer"
test = false
bench = false
