[package]
name = "ringbuf"
version = "0.2.0"
edition = "2018"

[features]
# To disable a ring buffer (but leave it otherwise present), enable the
# "disabled" feature
disabled = []

[build-dependencies]
build-util = {path = "../../build/util"}

[dependencies]
userlib = {path = "../../sys/userlib"}
cfg-if = "1"

[target.'cfg(target_arch = "arm")'.dependencies]
armv6m-atomic-hack = {path = "../../lib/armv6m-atomic-hack"}

[target.'cfg(target_arch = "riscv32")'.dependencies]
riscv-pseudo-atomics = { git = "https://github.com/rivosinc/riscv-psuedo-atomics", branch = "rivos/main", features = ["default", "user-mode"] }

