[package]
name = "abi"
version = "0.1.0"
edition = "2018"

[features]
default = []
host_use_abi64 = []
host_use_abi32 = []

[dependencies]
cfg-if = "1.0.0"
zerocopy = "0.6.1"
bitflags = "1.2.1"
byteorder = { version = "1.3.4", default-features = false }
serde = { version = "1.0.114", default-features = false, features = ["derive"] }
phash = { path = "../../lib/phash" }

[lib]
test = false
bench = false
