[package]
name = "task-jefe"
version = "0.1.0"
edition = "2018"

[dependencies]
abi = {path = "../../sys/abi"}
userlib = {path = "../../sys/userlib"}
hubris-num-tasks = {path = "../../sys/num-tasks", features = ["task-enum"]}
ringbuf = {path = "../../lib/ringbuf" }
num-traits = { version = "0.2.12", default-features = false }
serde = {version = "1", default-features = false, features = ["derive"]}
ssmarshal = {version = "1", default-features = false}
zerocopy = "0.6.1"
idol-runtime = {git = "https://github.com/oxidecomputer/idolatry.git"}
task-jefe-api = {path = "../jefe-api"}
cfg-if = "1.0.0"

[build-dependencies]
build-util = {path = "../../build/util"}
serde = {version = "1", features = ["derive"]}
anyhow = "1"
idol = {git = "https://github.com/oxidecomputer/idolatry.git"}

[features]
itm = [ "userlib/log-itm" ]
semihosting = [ "userlib/log-semihosting", "cortex-m-semihosting" ]
semihosting-riscv = [ "riscv-semihosting", "userlib/log-semihosting" ]
log-stringbuf = ["userlib/log-stringbuf"]
log-null = ["userlib/log-null"]
panic-messages = ["userlib/panic-messages"]

[target.'cfg(target_arch = "arm")'.dependencies]
cortex-m = { version = "0.7", features = ["inline-asm"] }
cortex-m-semihosting = { version = "0.5.0", optional = true }
armv6m-atomic-hack = {path = "../../lib/armv6m-atomic-hack"}

[target.'cfg(target_arch = "riscv32")'.dependencies]
riscv = { version = "0.8" }
riscv-semihosting = { git = "https://github.com/rivosinc/riscv-semihosting", branch = "dev/fawaz/privilege-features", optional = true, features = ["default", "user-mode"] }
riscv-pseudo-atomics = { git = "https://github.com/rivosinc/riscv-psuedo-atomics", branch = "rivos/main", features = ["default", "user-mode"] }

# This section is here to discourage RLS/rust-analyzer from doing test builds,
# since test builds don't work for cross compilation.
[[bin]]
name = "task-jefe"
test = false
bench = false
