[package]
name = "task-pong"
version = "0.1.0"
edition = "2018"

[features]
default = ["leds"]
leds = []
panic-messages = ["userlib/panic-messages"]

[dependencies]
userlib = {path = "../../sys/userlib"}
drv-user-leds-api = {path = "../../drv/user-leds-api"}

[target.'cfg(target_arch = "arm")'.dependencies]
cortex-m = {version = "0.7", features = ["inline-asm"]}

[[bin]]
name = "task-pong"
test = false
bench = false
