[package]
name = "test-runner"
version = "0.1.0"
edition = "2018"

[dependencies]
userlib = {path = "../../sys/userlib", features = ["panic-messages"]}
hubris-num-tasks = {path = "../../sys/num-tasks"}
test-api = {path = "../test-api"}
zerocopy = "0.6.1"
num-traits = { version = "0.2.12", default-features = false }
cfg-if = "1"

[build-dependencies]
build-util = {path = "../../build/util"}

[target.'cfg(target_arch = "arm")'.dependencies]
cortex-m = {version = "0.7", features = ["inline-asm"]}
armv6m-atomic-hack = {path = "../../lib/armv6m-atomic-hack"}
cortex-m-semihosting = { version = "0.5.0", optional = true }

[target.'cfg(target_arch = "riscv32")'.dependencies]
riscv = { version = "0.8" }
riscv-semihosting = { git = "https://github.com/rivosinc/riscv-semihosting", branch = "dev/fawaz/privilege-features", features = ["default", "user-mode"] }
riscv-pseudo-atomics = { git = "https://github.com/rivosinc/riscv-psuedo-atomics", branch = "rivos/main", features = ["default", "user-mode"] }

[features]
itm = [ "userlib/log-itm" ]
semihosting = ["cortex-m-semihosting", "userlib/log-semihosting"]

[[bin]]
name = "test-runner"
test = false
bench = false
