[package]
name = "tests-rv64-qemu-virt"
version = "0.1.0"
edition = "2021"

[dependencies]

[dependencies.kern]
path = "../../sys/kern"
default-features = false

[build-dependencies]
build-util = {path = "../../build/util"}

[[bin]]
name = "tests-rv64-qemu-virt"
path = "../../app/demo-rv64-qemu-virt/src/main.rs"
test = false
bench = false
